Closed Bug 1231480 Opened 10 years ago Closed 10 years ago

nsClipboard incorrectly states it can provide image/gif, despite there being no gif encoder

Categories

(Core Graveyard :: Widget: Gonk, defect)

defect
Not set
normal

Tracking

(firefox45 fixed)

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: nika, Assigned: nika)

References

Details

Attachments

(1 file)

There is no imgGIFEncoder in the tree, so when requesting data as a gif from the clipboard on B2G, the request will fail (B2G uses encoders to encode the images on the clipboard). The clipboard should not return true when "image/gif" is passed to HasDataMatchingFlavors.
Attachment #8697060 - Flags: review?(fabrice) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: