Bug 1231480 - Don't pretend we provide image/gif from clipboard on b2g, r=fabrice